--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ before_install:
   - curl -L https://raw.github.com/embarkmobile/android-sdk-installer/version-1/android-sdk-installer | bash /dev/stdin --install=$COMPONENTS
   - source ~/.android-sdk-installer/env
   - export ANDROID_HOME=`pwd`/android-sdk-linux
+
+script: gradle assemble
+
 notifications:
   email:
     recipients:
