fix travis build

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@ VERSION_NAME=0.9.1-SNAPSHOT
 GROUP=com.uphyca.galette
 
 POM_DESCRIPTION=Annotation-triggered tracking along with Google Analytics.
-POM_URL=https://github.com/uPhyca/galette
-POM_SCM_URL=https://github.com/uPhyca/galette
-POM_SCM_CONNECTION=scm:git@github.com/uPhyca/galette.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:uPhyca/galette.git
+POM_URL=https://github.com/uPhyca/GAlette
+POM_SCM_URL=https://github.com/uPhyca/GAlette
+POM_SCM_CONNECTION=scm:git@github.com/uPhyca/GAlette.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:uPhyca/GAlette.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
