--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=uphyca
 POM_DEVELOPER_NAME=uPhyca Inc.
+POM_ORGANIZATION_NAME=uPhyca Inc.
+POM_ORGANIZATION_URL=http://www.uphyca.com/
 
 POM_ARTIFACT_ID = galette
 
