--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,11 +1,16 @@
 buildscript {
+    repositories {
+        mavenCentral()
+        mavenLocal()
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
-        classpath 'com.uphyca.gradle:gradle-android-aspectj-plugin:0.9.+'
+        classpath 'com.uphyca.galette:galette-plugin:0.9.2-SNAPSHOT'
     }
 }
+
 apply plugin: 'android'
-apply plugin: 'android-aspectj'
+apply plugin: 'galette'
 
 android {
     compileSdkVersion 19
@@ -24,8 +29,4 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-}
-
-dependencies {
-    compile project(":galette")
 }
