--- a/example/build.gradle
+++ b/example/build.gradle
@@ -12,6 +12,11 @@ buildscript {
 apply plugin: 'android'
 apply plugin: 'galette'
 
+repositories {
+    mavenCentral()
+    mavenLocal()
+}
+
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.3"
@@ -20,7 +25,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 1
-        versionName VERSION_NAME
+        versionName '0.9-2-SNAPSHOT'
     }
 
     buildTypes {
