--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -31,9 +31,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    mavenLocal()
+}
+
 dependencies {
     //for local developing
-    compile 'com.uphyca.galette:galette:0.9.2-SNAPSHOT@aar'
+    //compile 'com.uphyca.galette:galette:0.9.2-SNAPSHOT@aar'
 
     androidTestCompile ("org.mockito:mockito-core:1.9.5")
     androidTestCompile "com.google.dexmaker:dexmaker:1.1"
