--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
-        classpath 'com.uphyca.galette:galette-plugin:0.9.2-SNAPSHOT'
+        classpath 'com.uphyca.galette:galette-plugin:0.9.2'
     }
 }
 
@@ -20,7 +20,6 @@ android {
         minSdkVersion 9
         targetSdkVersion 19
         versionCode 1
-        versionName "0.9.2-SNAPSHOT"
     }
 
     buildTypes {
