Prepare next development version.

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
-        classpath 'com.uphyca.galette:galette-plugin:0.9.3'
+        classpath 'com.uphyca.galette:galette-plugin:0.9.4-SNAPSHOT'
     }
 }
 
