--- a/build.gradle
+++ b/build.gradle
@@ -46,20 +46,38 @@ task installExample(type: Exec) {
     args = [ 'installDebug' ]
 }
 
-task cleanTests(type: Exec) {
+task cleanTests09(type: Exec) {
     executable = 'gradle'
-    workingDir = project.file('tests')
+    workingDir = project.file('tests09')
     args = [ 'clean' ]
 }
 
-task assembleTests(type: Exec) {
+task assembleTests09(type: Exec) {
     executable = 'gradle'
-    workingDir = project.file('tests')
+    workingDir = project.file('tests09')
     args = [ 'assemble' ]
 }
 
-task androidTests(type: Exec) {
+task runTests09(type: Exec) {
     executable = 'gradle'
-    workingDir = project.file('tests')
+    workingDir = project.file('tests09')
+    args = [ 'connectedAndroidTest' ]
+}
+
+task cleanTests010(type: Exec) {
+    executable = 'gradle'
+    workingDir = project.file('tests010')
+    args = [ 'clean' ]
+}
+
+task assembleTests010(type: Exec) {
+    executable = 'gradle'
+    workingDir = project.file('tests010')
+    args = [ 'assemble' ]
+}
+
+task runTests010(type: Exec) {
+    executable = 'gradle'
+    workingDir = project.file('tests010')
     args = [ 'connectedAndroidTest' ]
 }
