--- a/tests09/build.gradle
+++ b/tests09/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
-        classpath 'com.uphyca.galette:galette-plugin:0.9.4'
+        classpath 'com.uphyca.galette:galette-plugin:0.9.5-SNAPSHOT'
     }
 }
 
