--- a/instrumentation/build.gradle
+++ b/instrumentation/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     compile "org.ow2.asm:asm-commons:${asmVersion}"
     compile "org.ow2.asm:asm-tree:${asmVersion}"
     compile "org.ow2.asm:asm-analysis:${asmVersion}"
+
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'org.easytesting:fest-assert-core:2.0M10'
 }
 
 modifyPom {
