--- a/instrumentation/build.gradle
+++ b/instrumentation/build.gradle
@@ -20,11 +20,7 @@ dependencies {
         mavenCentral()
     }
 
-    compile "org.ow2.asm:asm:${asmVersion}"
-    compile "org.ow2.asm:asm-util:${asmVersion}"
-    compile "org.ow2.asm:asm-commons:${asmVersion}"
-    compile "org.ow2.asm:asm-tree:${asmVersion}"
-    compile "org.ow2.asm:asm-analysis:${asmVersion}"
+    compile "org.ow2.asm:asm-all:${asmVersion}"
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.mockito:mockito-all:1.9.5'
