sdk update fixed

--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,6 @@ box: wercker/android
 build:
   # The steps that will be executed on build
   steps:
-    - wercker/android-sdk-update@0.0.14
     - script:
         name: show base information
         code: |
@@ -14,7 +13,7 @@ build:
           echo $ANDROID_UPDATE_FILTER
           echo $ANDROID_NDK_HOME
     - android-sdk-update:
-        filter: sysimg-19,extra-android-support,extra-android-m2repository,extra-google-m2repository
+        filter: platform-tools,android-19,sysimg-19,extra-android-support,extra-android-m2repository,extra-google-m2repository
     # A step that executes `gradle build` command
     - script:
         name: run gradle
