after step added

--- a/wercker.yml
+++ b/wercker.yml
@@ -19,3 +19,10 @@ build:
         name: run gradle
         code: |
           gradle --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
+after-steps:
+    # Use the build results
+    - script:
+        name: inspect build result
+        code: |
+          ls -la GettingStarted/build/apk/
+          cp GettingStarted/build/apk/*.apk $WERCKER_REPORT_ARTIFACTS_DIR
