--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ build:
           echo $ANDROID_UPDATE_FILTER
           echo $ANDROID_NDK_HOME
     - android-sdk-update:
-        filter: platform-tools,android-19,sysimg-19,extra-android-support,extra-android-m2repository,extra-google-m2repository
+        filter: platform-tools,build-tools-19.0.3,build-tools-19.1.0,android-19,sysimg-19,extra-android-m2repository,extra-google-m2repository
     - script:
         name: run gradle
         code: |
@@ -21,9 +21,13 @@ build:
     - setup-android-emulator:
         target: android-19
     - script:
-        name: run gradle connectedCheck
+        name: run gradle connectedCheck build-tools-19.0.+
         code: |
-          gradle --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest09 connectedAndroidTest010
+          gradle --project-cache-dir=$WERCKER_CACHE_DIR clean connectedAndroidTest09
+    - script:
+        name: run gradle connectedCheck build-tools-19.1.+
+        code: |
+          gradle --project-cache-dir=$WERCKER_CACHE_DIR clean connectedAndroidTest010
 after-steps:
     # Use the build results
     - script:
