--- a/tests09/build.gradle
+++ b/tests09/build.gradle
@@ -12,9 +12,17 @@ buildscript {
 apply plugin: 'android-library'
 apply plugin: 'galette'
 
+def isWercker = "true".equals(System.getenv("WERCKER"))
+def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.3"
+
+    dexOptions {
+        // Skip pre-dexing when running on Wercker CI or when disabled via -Dpre-dex=false.
+        preDexLibraries = preDexEnabled && !isWercker
+    }
 
     defaultConfig {
         minSdkVersion 9
