Prepare next development version.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME=0.9.5
+VERSION_NAME=0.9.6-SNAPSHOT
 GROUP=com.uphyca.galette
 
 POM_DESCRIPTION=Annotation-triggered tracking along with Google Analytics.
