--- a/tests010/build.gradle
+++ b/tests010/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.10.+'
-        classpath 'com.uphyca.galette:galette-plugin:0.9.5'
+        classpath 'com.uphyca.galette:galette-plugin:0.9.6-SNAPSHOT'
     }
 }
 
