--- a/tests010/build.gradle
+++ b/tests010/build.gradle
@@ -9,6 +9,10 @@ buildscript {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.10'
+}
+
 apply plugin: 'android-library'
 apply plugin: 'galette'
 
