--- a/tests012/build.gradle
+++ b/tests012/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.11.+'
+        classpath 'com.android.tools.build:gradle:0.12.+'
         classpath 'com.uphyca.galette:galette-plugin:0.9.8-SNAPSHOT'
     }
 }
@@ -13,7 +13,7 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.12'
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 apply plugin: 'galette'
 
 def isWercker = "true".equals(System.getenv("WERCKER"))
@@ -21,7 +21,7 @@ def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1"
+    buildToolsVersion "20.0.0"
 
     dexOptions {
         // Skip pre-dexing when running on Wercker CI or when disabled via -Dpre-dex=false.
