--- a/wercker.yml
+++ b/wercker.yml
@@ -6,7 +6,7 @@ build:
     - script:
         name: show base information
         code: |
-          gradle -v
+          ./gradlew -v
           echo $ANDROID_HOME
           echo $ANDROID_SDK_VERSION
           echo $ANDROID_BUILD_TOOLS
@@ -17,25 +17,25 @@ build:
     - script:
         name: build and install
         code: |
-          gradle --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build install
+          ./gradlew --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build install
     - setup-android-emulator:
         target: android-19
     - script:
         name: connectedCheck on plugin version 0.9
         code: |
-          gradle --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest09
+          ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest09
     - script:
         name: connectedCheck on plugin version 0.10
         code: |
-          gradle --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest010
+          ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest010
     - script:
         name: connectedCheck on plugin version 0.11
         code: |
-          gradle --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest011
+          ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest011
     - script:
         name: connectedCheck on plugin version 0.12
         code: |
-          gradle --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest012
+          ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest012
 after-steps:
     # Use the build results
     - script:
