--- a/instrumentation/build.gradle
+++ b/instrumentation/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.2'
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.3'
     }
 }
 
@@ -17,6 +18,7 @@ version = VERSION_NAME
 
 dependencies {
     repositories {
+        jcenter()
         mavenCentral()
     }
 
