--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.2'
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.3'
     }
 }
 
@@ -17,12 +18,13 @@ version = VERSION_NAME
 
 dependencies {
     repositories {
+        jcenter()
         mavenCentral()
     }
 
     compile gradleApi()
     compile localGroovy()
-    compile 'com.android.tools.build:gradle:0.9.+'
+    compile 'com.android.tools.build:gradle:1.0.0'
 }
 
 install {
