--- a/tests09/build.gradle
+++ b/tests09/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
         mavenLocal()
     }
@@ -7,6 +8,10 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.9.+'
         classpath 'com.uphyca.galette:galette-plugin:0.9.8-SNAPSHOT'
     }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.10'
 }
 
 apply plugin: 'android-library'
@@ -44,15 +49,8 @@ repositories {
 }
 
 dependencies {
-    //for local developing
-    //compile 'com.uphyca.galette:galette:0.9.2-SNAPSHOT@aar'
-
     androidTestCompile ("org.mockito:mockito-core:1.9.5")
     androidTestCompile "com.google.dexmaker:dexmaker:1.1"
     androidTestCompile ("com.google.dexmaker:dexmaker-mockito:1.1") { exclude group: 'org.mockito' }
     androidTestCompile "com.squareup:fest-android:1.0.+"
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.10'
 }
