--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -1,16 +1,17 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:1.0.0'
         classpath 'com.uphyca.galette:galette-plugin:0.9.8-SNAPSHOT'
     }
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
+    gradleVersion = '2.2.1'
 }
 
 apply plugin: 'com.android.library'
@@ -20,8 +21,8 @@ def isWercker = "true".equals(System.getenv("WERCKER"))
 def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
 
     dexOptions {
         // Skip pre-dexing when running on Wercker CI or when disabled via -Dpre-dex=false.
@@ -30,30 +31,28 @@ android {
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
     }
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-
 }
 
 repositories {
+    jcenter()
     mavenCentral()
     mavenLocal()
 }
 
 dependencies {
-    //for local developing
-    //compile 'com.uphyca.galette:galette:0.9.2-SNAPSHOT@aar'
-
     androidTestCompile ("org.mockito:mockito-core:1.9.5")
     androidTestCompile "com.google.dexmaker:dexmaker:1.1"
     androidTestCompile ("com.google.dexmaker:dexmaker-mockito:1.1") { exclude group: 'org.mockito' }
     androidTestCompile "com.squareup:fest-android:1.0.+"
 }
+
