--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ build:
           echo $ANDROID_UPDATE_FILTER
           echo $ANDROID_NDK_HOME
     - android-sdk-update:
-        filter: platform-tools,build-tools-19.0.3,build-tools-19.1.0,build-tools-20.0.0,android-19,sysimg-19,extra-android-m2repository,extra-google-m2repository
+        filter: platform-tools,build-tools-19.0.3,build-tools-21.1.1,android-19,sysimg-19,android-21,sysimg-21,extra-android-m2repository,extra-google-m2repository
     - script:
         name: build and install
         code: |
@@ -24,14 +24,6 @@ build:
         name: connectedCheck on plugin version 0.9
         code: |
           ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest09
-    - script:
-        name: connectedCheck on plugin version 0.10
-        code: |
-          ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest010
-    - script:
-        name: connectedCheck on plugin version 0.11
-        code: |
-          ./gradlew --project-cache-dir=$WERCKER_CACHE_DIR connectedAndroidTest011
     - script:
         name: connectedCheck on plugin version 0.12
         code: |
