--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ build:
           echo $ANDROID_UPDATE_FILTER
           echo $ANDROID_NDK_HOME
     - android-sdk-update:
-        filter: platform-tools,build-tools-21.1.1,android-21,sysimg-21,extra-android-m2repository,extra-google-m2repository
+        filter: platform-tools,build-tools-21.1.1,android-21,sys-img-armeabi-v7a-android-21,extra-android-m2repository,extra-google-m2repository
     - script:
         name: build and install
         code: |
