--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -53,6 +53,6 @@ dependencies {
     androidTestCompile ("org.mockito:mockito-core:1.9.5")
     androidTestCompile "com.google.dexmaker:dexmaker:1.1"
     androidTestCompile ("com.google.dexmaker:dexmaker-mockito:1.1") { exclude group: 'org.mockito' }
-    androidTestCompile "com.squareup:fest-android:1.0.+"
+    androidTestCompile "com.squareup:fest-android:1.0.8@aar"
 }
 
