--- a/example/build.gradle
+++ b/example/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
-        classpath 'com.uphyca.galette:galette-plugin:0.9.9-SNAPSHOT'
+        classpath 'com.uphyca.galette:galette-plugin:0.9.9'
     }
 }
 
