--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
         classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'com.uphyca.galette:galette-plugin:0.9.11-SNAPSHOT'
     }
@@ -14,6 +15,7 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.2.1'
 }
 
+apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
 apply plugin: 'galette'
 
