--- a/wercker.yml
+++ b/wercker.yml
@@ -12,6 +12,17 @@ build:
           echo $ANDROID_BUILD_TOOLS
           echo $ANDROID_UPDATE_FILTER
           echo $ANDROID_NDK_HOME
+    - script:
+        # Taken from https://github.com/wercker/box-android/blob/master/install-sdk.sh
+        name: install android sdk
+        code: |
+          export ANDROID_SDK_VERSION="24.4.1"
+          wget "http://dl.google.com/android/android-sdk_r${ANDROID_SDK_VERSION}-linux.tgz"
+          tar xzf "android-sdk_r${ANDROID_SDK_VERSION}-linux.tgz"
+          rm "android-sdk_r${ANDROID_SDK_VERSION}-linux.tgz"
+          export ANDROID_HOME=${PWD}/android-sdk-linux
+          export PATH="${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools"
+          type android || { echo "Path: $PATH"; echo 'Android not availble after installation, terminating.'; exit 1; }
     - android-sdk-update:
         filter: platform-tools,build-tools-23.0.2,android-23,sysimg-23,extra-android-m2repository,extra-google-m2repository
     - script:
