--- a/tests/gradle/wrapper/gradle-wrapper.properties
+++ b/tests/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,5 @@
-#Mon Nov 02 16:23:16 JST 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.2-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.8-bin.zip
