--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,21 +1,21 @@
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
         mavenLocal()
     }
     dependencies {
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath 'com.uphyca.galette:galette-plugin:0.9.17-SNAPSHOT'
     }
 }
 
-apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 apply plugin: 'com.uphyca.galette'
 
 repositories {
+    google()
     jcenter()
     mavenCentral()
     mavenLocal()
@@ -26,7 +26,7 @@ def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "30.0.3"
 
     compileOptions {
         encoding = "UTF-8"
