--- a/instrumentation/build.gradle
+++ b/instrumentation/build.gradle
@@ -25,11 +25,11 @@ dependencies {
         mavenCentral()
     }
 
-    compile "org.ow2.asm:asm-all:${asmVersion}"
+    implementation "org.ow2.asm:asm-all:${asmVersion}"
 
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.mockito:mockito-all:1.10.19'
-    testCompile 'org.easytesting:fest-assert-core:2.0M10'
+    testImplementation 'junit:junit:4.11'
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+    testImplementation 'org.easytesting:fest-assert-core:2.0M10'
 }
 
 modifyPom {
