--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -25,9 +25,9 @@ dependencies {
         mavenCentral()
     }
 
-    compile gradleApi()
-    compile localGroovy()
-    compile 'com.android.tools.build:gradle:1.3.1'
+    implementation gradleApi()
+    implementation localGroovy()
+    implementation 'com.android.tools.build:gradle:1.3.1'
 }
 
 install {
