--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -1,17 +1,20 @@
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
         mavenLocal()
     }
     dependencies {
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath 'com.uphyca.galette:galette-plugin:0.9.17-SNAPSHOT'
     }
 }
 
-apply plugin: 'android-sdk-manager'
+repositories {
+    google()
+}
+
 apply plugin: 'com.android.library'
 apply plugin: 'com.uphyca.galette'
 
@@ -20,7 +23,7 @@ def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "30.0.3"
 
     dexOptions {
         // Skip pre-dexing when running on Wercker CI or when disabled via -Dpre-dex=false.
@@ -48,10 +51,10 @@ repositories {
 }
 
 dependencies {
-    androidTestCompile ("org.mockito:mockito-core:1.10.19")
-    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
-    androidTestCompile ("com.google.dexmaker:dexmaker-mockito:1.2") { exclude group: 'org.mockito' }
-    androidTestCompile "com.squareup:fest-android:1.0.8@aar"
+    androidTestImplementation ("org.mockito:mockito-core:1.10.19")
+    androidTestImplementation "com.google.dexmaker:dexmaker:1.2"
+    androidTestImplementation ("com.google.dexmaker:dexmaker-mockito:1.2") { exclude group: 'org.mockito' }
+    androidTestImplementation "com.squareup:fest-android:1.0.8@aar"
 }
 
 wrapper {
